fix stretched out logo in safari

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ button:focus,
 .page-header__item:first-child {
     width: 200px;
     height: auto;
+    max-height: 200px;
 }
 
 .page-header__item:last-child{
